--- a/clash config.yaml
+++ b/clash config.yaml
@@ -10,15 +10,13 @@
 # @ClashDownload     https://github.com/Fndroid/clash_for_windows_pkg/releases
 # @Thanks            @ddgksf2013, @blackmatrix7, @Fndroid, @Anti
 # @Attention         𝐏𝐥𝐞𝐚𝐬𝐞 𝐮𝐬𝐞 𝐭𝐡𝐞 𝐥𝐚𝐭𝐞𝐬𝐭 𝐯𝐞𝐫𝐬𝐢𝐨𝐧 𝐨𝐟 𝐂𝐥𝐚𝐬𝐡𝐟𝐨𝐫𝐖𝐢𝐧𝐝𝐨𝐰𝐬
-# @ConfigVersion     1.1
+# @ConfigVersion     1.2
 #==========================================
 port: 7890           # HTTP 代理端口
 socks-port: 7891     # Socks 端口
-redir-port: 7892     # Redir 端口
-mixed-port: 7893     # 混合端口
 allow-lan: true      # 允许局域网连接
 #bind-address: "*"   # 地址绑定
-mode: rule           # 规则模式
+mode: rule           # 路由模式
 log-level: info      # 日志级别
 # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
 ipv6: false          
@@ -27,7 +25,7 @@ external-controller: 127.0.0.1:9090 # RESTful API 监听地址
 dns:
   enable: true       # 关闭将使用系统 DNS
   ipv6: false        # 关闭 IPV6, false 将返回 AAAA 的空结果
-  listen: 127.0.0.1:53 # dns 监听
+  listen: 0.0.0.0:53 # dns 监听
 # 用于解析 nameserver，fallback 以及其他DNS服务器配置的，DNS 服务域名
   default-nameserver: # 默认 DNS 服务 
     - 223.5.5.5
@@ -38,11 +36,6 @@ dns:
   fake-ip-filter: #fakeip 过滤，配置不使用fake-ip的域名
     - "*.lan"
     - localhost.ptlogin2.qq.com
-    - +.srv.nintendo.net
-    - "*.battlenet.com.cn"
-    - "*.battlenet.com"
-    - "*.blzstatic.cn"
-    - "*.battle.net"
     - +.stun.*.*
     - +.stun.*.*.*
     - +.stun.*.*.*.*
@@ -57,8 +50,8 @@ dns:
     - localhost.ptlogin2.qq.com
     - WORKGROUP
   nameserver:        # 默认域名解析服务器
-     - https://doh.pub/dns-query
-     - https://dns.alidns.com/dns-query
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
   fallback:          # 国外 DNS 服务器, 后备域名解析服务器
     - https://cloudflare-dns.com/dns-query
     - https://dns.alidns.com/dns-query
@@ -93,10 +86,10 @@ proxy-groups: #策略组
   - {name: 📺 哔哩哔哩, type: select, proxies: [DIRECT, 🌏 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点]}
   - {name: 🪁 微软云盘, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🇭🇰 香港节点, <<: *a2, filter: "港|HK|(?i)Hong"           }             # a4更改为a2，即为手动选择
-  - {name: 🇯🇵 日本节点, <<:  *a2, filter: "日|东京|JP|(?i)Japan"     }             # a4更改为a2，即为手动选择     
-  - {name: 🇨🇳 台湾节点, <<: *a2, filter: "台|湾|TW|(?i)Taiwan"      }             # a4更改为a2，即为手动选择
-  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|US|(?i)States|American"}             # a4更改为a2，即为手动选择
-  - {name: 🇸🇬 狮城节点, <<: *a2, filter: "新|坡|SG|(?i)Singapore"    }            # a4更改为a2，即为手动选择
+  - {name: 🇯🇵 日本节点, <<:  *a2, filter: "日本|东京|大阪|埼玉|JP|(?i)Japan"     }             # a4更改为a2，即为手动选择 
+  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American"}             # a4更改为a2，即为手动选择    
+  - {name: 🇨🇳 台湾节点, <<: *a2, filter: "台|湾|新北|TW|(?i)Taiwan"      }             # a4更改为a2，即为手动选择
+  - {name: 🇸🇬 狮城节点, <<: *a2, filter: "新加坡|坡|狮城|SG|(?i)Singapore"    }            # a4更改为a2，即为手动选择
   - {name: ♻️ 自动选择, <<: *a4}
   - {name: 🍎 苹果服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🪁 微软服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
@@ -111,19 +104,21 @@ rule-providers: # 分流规则集
   GlobalMedia: {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml  }
   Apple:       {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml,              path: ./ruleset/Apple.yaml        }
   Github:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml,                      path: ./ruleset/Github.yaml       }
-  OneDrive:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                path: ./ruleset/OneDrive.yaml    }
+  OneDrive:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                path: ./ruleset/OneDrive.yaml    }
   Microsoft:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml,                path: ./ruleset/Microsoft.yaml    }
   Google:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml,                      path: ./ruleset/Google.yaml       }
   Telegram:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml,                  path: ./ruleset/Telegram.yaml     }
   Twitter:     {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml,                    path: ./ruleset/Twitter.yaml      }
   Game:        {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml,                          path: ./ruleset/Game.yaml         }
-  ChinaIP:     {<<: *a7, url: https://cdn.jsdelivr.net/gh/soffchen/GeoIP2-CN@release/clash-rule-provider.yml,                                     path: ./ruleset/ChinaIP.yaml      }
-  ProxyLite:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/ProxyLite/ProxyLite.yaml,                path: ./ruleset/ProxyLite.yaml    }
+  ChinaIP:     {<<: *a7, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,                                     path: ./ruleset/ChinaIP.yaml      }
+  Proxy:       {<<: *a5, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,                path: ./ruleset/Proxy.yaml    }
 
 rules: #分流规则
   - DOMAIN-SUFFIX,gstatic.com,🌏 全球加速
-  - DOMAIN-SUFFIX,services.googleapis.cn,🌏 全球加速
+  - DOMAIN-SUFFIX,googleapis.cn,🌏 全球加速
+  - DOMAIN-SUFFIX,googleapis.com,🌏 全球加速
   - DOMAIN-SUFFIX,spotify.com,🇺🇲 美国节点
+  - DOMAIN-SUFFIX,e-hentai.org,🇺🇲 美国节点
   - DOMAIN-SUFFIX,exhentai.org,🇺🇲 美国节点
   - DOMAIN-SUFFIX,javdb.com,🇭🇰 香港节点
   - DOMAIN-SUFFIX,volcengineapi.com,DIRECT
@@ -143,19 +138,19 @@ rules: #分流规则
   - DOMAIN-SUFFIX,sentry.io,REJECT
   - PROCESS-NAME,coodesker-x64.exe,REJECT
   - PROCESS-NAME,2345PicViewer.exe,REJECT
-  - RULE-SET,Lan,DIRECT
   - RULE-SET,BiliBili,📺 哔哩哔哩
-  - RULE-SET,Direct,DIRECT
-  - RULE-SET,ChinaIP,DIRECT
-  - RULE-SET,GlobalMedia,🎬 国际媒体
   - RULE-SET,OneDrive, 🪁 微软云盘
   - RULE-SET,Microsoft, 🪁 微软服务
   - RULE-SET,Apple,🍎 苹果服务
+  - RULE-SET,Direct,DIRECT
+  - RULE-SET,Lan,DIRECT
+  - RULE-SET,GlobalMedia,🎬 国际媒体
   - RULE-SET,Game,🎮 游戏平台
+  - RULE-SET,Telegram,🌏 全球加速
   - RULE-SET,Github,🌏 全球加速
   - RULE-SET,Google,🌏 全球加速
-  - RULE-SET,Telegram,🌏 全球加速
   - RULE-SET,Twitter,🌏 全球加速
-  - RULE-SET,ProxyLite,🌏 全球加速
+  - RULE-SET,Proxy,🌏 全球加速
+  - RULE-SET,ChinaIP,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,🐟 兜底分流
