--- a/clash config.yaml
+++ b/clash config.yaml
@@ -76,20 +76,20 @@ proxy-providers: #代理集
   Subscribe:
     <<: *a1
     url: https://sub.xeton.dev/sub?target=clash&url=请手动填入你的订阅[多机场订阅用|分割即可]&list=true&udp=true
-    path: ./proxy_providers/tmp.yaml
+    path: ./proxy_providers/1.yaml
 
 proxies: null #节点
 
-proxy-groups: #策略组
+proxy-groups: #策略组 a4更改为a2，即为手动选择
   - {name: 🌏 全球加速, type: select, proxies: [♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点]}
   - {name: 🚀 手动切换, <<: *a2}
   - {name: 📺 哔哩哔哩, type: select, proxies: [DIRECT, 🌏 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点]}
   - {name: 🪁 微软云盘, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
-  - {name: 🇭🇰 香港节点, <<: *a2, filter: "港|HK|(?i)Hong"           }             # a4更改为a2，即为手动选择
-  - {name: 🇯🇵 日本节点, <<:  *a2, filter: "日本|东京|大阪|埼玉|JP|(?i)Japan"     }             # a4更改为a2，即为手动选择 
-  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American"}             # a4更改为a2，即为手动选择    
-  - {name: 🇨🇳 台湾节点, <<: *a2, filter: "台|湾|新北|TW|(?i)Taiwan"      }             # a4更改为a2，即为手动选择
-  - {name: 🇸🇬 狮城节点, <<: *a2, filter: "新加坡|坡|狮城|SG|(?i)Singapore"    }            # a4更改为a2，即为手动选择
+  - {name: 🇭🇰 香港节点, <<: *a2, filter: "港|HK|(?i)Hong"}
+  - {name: 🇯🇵 日本节点, <<:  *a2, filter: "日本|东京|大阪|埼玉|JP|(?i)Japan"}
+  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American"} 
+  - {name: 🇨🇳 台湾节点, <<: *a2, filter: "台|湾|新北|TW|(?i)Taiwan"}
+  - {name: 🇸🇬 狮城节点, <<: *a2, filter: "新加坡|坡|狮城|SG|(?i)Singapore"}
   - {name: ♻️ 自动选择, <<: *a4}
   - {name: 🍎 苹果服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🪁 微软服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
@@ -98,20 +98,20 @@ proxy-groups: #策略组
   - {name: 🐟 兜底分流, type: select, proxies: [🌏 全球加速, DIRECT]}
  
 rule-providers: # 分流规则集
-  Direct:      {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt,                      path: ./ruleset/Direct.yaml       }
+  Direct:      {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt,                                            path: ./ruleset/Direct.yaml       }
   Lan:         {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml,                            path: ./ruleset/Lan.yaml          }
   BiliBili:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml,                  path: ./ruleset/BiliBili.yaml     }
   GlobalMedia: {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml  }
   Apple:       {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml,              path: ./ruleset/Apple.yaml        }
   Github:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml,                      path: ./ruleset/Github.yaml       }
-  OneDrive:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                path: ./ruleset/OneDrive.yaml    }
+  OneDrive:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                  path: ./ruleset/OneDrive.yaml    }
   Microsoft:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml,                path: ./ruleset/Microsoft.yaml    }
   Google:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml,                      path: ./ruleset/Google.yaml       }
   Telegram:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml,                  path: ./ruleset/Telegram.yaml     }
   Twitter:     {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml,                    path: ./ruleset/Twitter.yaml      }
   Game:        {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml,                          path: ./ruleset/Game.yaml         }
-  ChinaIP:     {<<: *a7, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,                                     path: ./ruleset/ChinaIP.yaml      }
-  Proxy:       {<<: *a5, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,                path: ./ruleset/Proxy.yaml    }
+  ChinaIP:     {<<: *a7, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,                  path: ./ruleset/ChinaIP.yaml      }
+  Proxy:       {<<: *a5, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,                   path: ./ruleset/Proxy.yaml    }
 
 rules: #分流规则
   - DOMAIN-SUFFIX,gstatic.com,🌏 全球加速
