--- a/clash config.yaml
+++ b/clash config.yaml
@@ -1,97 +1,93 @@
-#==========================================
-# @ConfigName        自用Clash配置文件
-# @Author            @ddgksf2013
-# @contributors      @saku
-# @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
-# @WechatID          公众号墨鱼手记
-# @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# @UpdateTime        2023/05/28 09:30 UTC/GMT +8
-# @Function          支持手动选择、自动测速、兜底分流、按国家分组节点等等   
-# @ClashDownload     https://github.com/Fndroid/clash_for_windows_pkg/releases
-# @Thanks            @ddgksf2013, @blackmatrix7, @Fndroid, @Anti
-# @Attention         𝐏𝐥𝐞𝐚𝐬𝐞 𝐮𝐬𝐞 𝐭𝐡𝐞 𝐥𝐚𝐭𝐞𝐬𝐭 𝐯𝐞𝐫𝐬𝐢𝐨𝐧 𝐨𝐟 𝐂𝐥𝐚𝐬𝐡𝐟𝐨𝐫𝐖𝐢𝐧𝐝𝐨𝐰𝐬
-# @ConfigVersion     1.2
-#==========================================
 port: 7890           # HTTP 代理端口
 socks-port: 7891     # Socks 端口
 allow-lan: true      # 允许局域网连接
-#bind-address: "*"   # 地址绑定
+bind-address: "*"    # 地址绑定
 mode: rule           # 路由模式
 log-level: info      # 日志级别
-# 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
-ipv6: false          
+ipv6: true        
 external-controller: 127.0.0.1:9090 # RESTful API 监听地址
 
 dns:
-  enable: true       # 关闭将使用系统 DNS
-  ipv6: false        # 关闭 IPV6, false 将返回 AAAA 的空结果
-  listen: 0.0.0.0:53 # dns 监听
-# 用于解析 nameserver，fallback 以及其他DNS服务器配置的，DNS 服务域名
-  default-nameserver: # 默认 DNS 服务 
+  enable: true
+  ipv6: true
+  listen: 0.0.0.0:1053
+  default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
   enhanced-mode: fake-ip #dns 处理模式
-#fakeip 下的 IP 段设置，tun 网卡的默认 ip 也使用此值
-  fake-ip-range: 198.18.0.1/16 
+  fake-ip-range: 198.18.0.1/16
   fake-ip-filter: #fakeip 过滤，配置不使用fake-ip的域名
     - "*.lan"
-    - localhost.ptlogin2.qq.com
-    - +.stun.*.*
-    - +.stun.*.*.*
-    - +.stun.*.*.*.*
-    - +.stun.*.*.*.*.*
-    - xbox.*.*.microsoft.com
+    - "*.localdomain"
+    - "*.example"
+    - "*.invalid"
+    - "*.localhost"
+    - "*.test"
+    - "*.local"
+    - "time.*.com"
+    - "time.*.apple.com"
+    - "time1.*.com"
+    - "time2.*.com"
+    - "time3.*.com"
+    - "time4.*.com"
+    - "time5.*.com"
+    - "time6.*.com"
+    - "time7.*.com"
+    - "+.stun.*.*"
+    - "+.stun.*.*.*"
+    - "+.stun.*.*.*.*"
+    - "+.stun.*.*.*.*.*"
+    - "xbox.*.*.microsoft.com"
     - "*.*.xboxlive.com"
     - "*.msftncsi.com"
     - "*.msftconnecttest.com"
-    - router.asus.com
-    - +.music.163.com
-    - +.y.qq.com
-    - localhost.ptlogin2.qq.com
+    - "*.126.net"
+    - "router.asus.com"
+    - "+.music.163.com"
+    - "+.y.qq.com"
+    - "localhost.ptlogin2.qq.com"
+    - "localhost.sec.qq.com"
     - WORKGROUP
-  nameserver:        # 默认域名解析服务器
+  nameserver:
     - https://dns.alidns.com/dns-query
     - https://doh.pub/dns-query
-  fallback:          # 国外 DNS 服务器, 后备域名解析服务器
-    - https://cloudflare-dns.com/dns-query
-    - https://dns.alidns.com/dns-query
-#当 nameserver 域名的 IP 查询 geoip 库为 CN 时，不使用 fallback 中的 DNS 查询结果
-  fallback-filter: 
-    geoip: true
-    geoip-code: CN
-    ipcidr:
-      - 240.0.0.0/4
+    - 8.8.8.8
+
 #========= 建立锚点 =========#
 
 # 策略组引用
-pr:   &a3 {type: select,   proxies: [🚀 手动切换, ♻️ 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇨🇳 台湾节点, 🇸🇬 狮城节点, DIRECT]}
-p:    &a1 {type: http,     interval: 86400,  health-check: {enable: true, url: http://www.gstatic.com/generate_204, interval: 1800}}
-auto: &a4 {type: url-test, lazy: true,  url: http://www.gstatic.com/generate_204, interval: 1000, use: [Subscribe]}
-use:  &a2 {type: select,   use: [Subscribe]}
-c:    &a6 {type: http,     behavior: classical, interval: 86400}
+p:    &a1 {type: http,     interval: 86400, health-check: {enable: false, url: https://www.gstatic.com/generate_204, interval: 1800}}
+use:  &a2 {type: select,   use: [qhcy,Fishchips]}
+auto: &a3 {type: url-test, lazy: true,  url: https://www.gstatic.com/generate_204, interval: 1800, use: [qhcy,Fishchips]}
+c:    &a4 {type: http,     behavior: classical, interval: 86400}
 d:    &a5 {type: http,     behavior: domain,    interval: 86400}
-i:    &a7 {type: http,     behavior: ipcidr,    interval: 86400}
+i:    &a6 {type: http,     behavior: ipcidr,    interval: 86400}
 
 proxy-providers: #代理集
-  Subscribe:
+  qhcy:
     <<: *a1
-    url: https://sub.xeton.dev/sub?target=clash&url=请手动填入你的订阅[多机场订阅用|分割即可]&list=true&udp=true
-    path: ./proxy_providers/1.yaml
+    url: https://v2bapi.qhcy.me/api/v1/client/subscribe?token=07d2164e492d09a07203e514f97bfb15&flag=clash
+    path: ./proxy_providers/3.yaml
+  Fishchips:
+    <<: *a1
+    url: https://hirasawa.chipsfuck.fish/api/v1/client/subscribe?token=8a8dfd757d1aec6b75f7b8364bb81612&flag=clash
+    path: ./proxy_providers/4.yaml
 
 proxies: null #节点
 
 proxy-groups: #策略组 a4更改为a2，即为手动选择
-  - {name: 🌏 全球加速, type: select, proxies: [♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点]}
-  - {name: 🚀 手动切换, <<: *a2, filter: "^[^官|套|ex]*$"}
+  - {name: 🌏 全球加速, type: select, proxies: [♻️ 自动选择, 🚀 手动切换, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, 🇦🇶 冷门地区]}
+  - {name: 🚀 手动切换, <<: *a2, filter: "^(?!.*((?i)官|套|天|剩|禁)).*$"}
   - {name: 📺 哔哩哔哩, type: select, proxies: [DIRECT, 🌏 全球加速, 🇭🇰 香港节点, 🇨🇳 台湾节点]}
   - {name: 🪁 微软云盘, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🇭🇰 香港节点, <<: *a2, filter: "港|HK|(?i)Hong"}
   - {name: 🇯🇵 日本节点, <<:  *a2, filter: "日本|东京|大阪|埼玉|JP|(?i)Japan"}
-  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American"} 
+  - {name: 🇺🇲 美国节点, <<: *a2, filter: "美|凤凰城|费利蒙|加州|纽约|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American"} 
   - {name: 🇨🇳 台湾节点, <<: *a2, filter: "台|湾|新北|TW|(?i)Taiwan"}
   - {name: 🇸🇬 狮城节点, <<: *a2, filter: "新加坡|坡|狮城|SG|(?i)Singapore"}
-  - {name: ♻️ 自动选择, <<: *a4, filter: "^[^官|套|ex]*$"}
-  - {name: 🍎 苹果服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
+  - {name: 🇦🇶 冷门地区, <<: *a2, filter: "(?i)^(?!.*(?:官|套|天|剩|禁|港|HK|(?i)Hong|日本|东京|大阪|埼玉|JP|(?i)Japan|美|凤凰城|费利蒙|加州|纽约|拉斯维加斯|洛杉矶|圣何塞|西雅图|芝加哥|US|(?i)States|American|台|湾|新北|TW|(?i)Taiwan|新加坡|坡|狮城|SG|(?i)Singapore)).*$"}
+  - {name: ♻️ 自动选择, <<: *a3, filter: "^(?!.*((?i)官|套|天|剩|禁)).*$"}
+  - {name: 🍎 苹果服务, type: select, proxies: [DIRECT, 🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点]}
   - {name: 🪁 微软服务, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🎮 游戏平台, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点, DIRECT]}
   - {name: 🎬 国际媒体, type: select, proxies: [🌏 全球加速, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇺🇲 美国节点, 🇸🇬 狮城节点]}
@@ -99,34 +95,31 @@ proxy-groups: #策略组 a4更改为a2，即为手动选择
  
 rule-providers: # 分流规则集
   Direct:      {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt,                                            path: ./ruleset/Direct.yaml       }
-  Lan:         {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml,                            path: ./ruleset/Lan.yaml          }
-  BiliBili:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml,                  path: ./ruleset/BiliBili.yaml     }
-  GlobalMedia: {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml  }
-  Apple:       {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml,              path: ./ruleset/Apple.yaml        }
-  Github:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml,                      path: ./ruleset/Github.yaml       }
-  OneDrive:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                  path: ./ruleset/OneDrive.yaml    }
-  Microsoft:   {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml,                path: ./ruleset/Microsoft.yaml    }
-  Google:      {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml,                      path: ./ruleset/Google.yaml       }
-  Telegram:    {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml,                  path: ./ruleset/Telegram.yaml     }
-  Twitter:     {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml,                    path: ./ruleset/Twitter.yaml      }
-  Game:        {<<: *a6, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml,                          path: ./ruleset/Game.yaml         }
-  ChinaIP:     {<<: *a7, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,                  path: ./ruleset/ChinaIP.yaml      }
-  Proxy:       {<<: *a5, url: https://ghproxy.com/https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,                   path: ./ruleset/Proxy.yaml    }
+  Proxy:       {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules/release/proxy.txt,                                             path: ./ruleset/Proxy.yaml        }
+  Lan:         {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml,                            path: ./ruleset/Lan.yaml          }
+  BiliBili:    {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml,                  path: ./ruleset/BiliBili.yaml     }
+  GlobalMedia: {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml  }
+  Apple:       {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple_Classical.yaml,              path: ./ruleset/Apple.yaml        }
+  Github:      {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml,                      path: ./ruleset/Github.yaml       }
+  OneDrive:    {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive.yaml,                  path: ./ruleset/OneDrive.yaml    }
+  Microsoft:   {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.yaml,                path: ./ruleset/Microsoft.yaml    }
+  Google:      {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml,                      path: ./ruleset/Google.yaml       }
+  Telegram:    {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Telegram/Telegram.yaml,                  path: ./ruleset/Telegram.yaml     }
+  Twitter:     {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter.yaml,                    path: ./ruleset/Twitter.yaml      }
+  Game:        {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/Game.yaml,                          path: ./ruleset/Game.yaml         }
+  SteamCN:     {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/SteamCN/SteamCN.yaml,                    path: ./ruleset/SteamCN.yaml      }
 
 rules: #分流规则
-  - DOMAIN-SUFFIX,gstatic.com,🌏 全球加速
-  - DOMAIN-SUFFIX,googleapis.cn,🌏 全球加速
-  - DOMAIN-SUFFIX,googleapis.com,🌏 全球加速
+  - #DOMAIN-SUFFIX,gstatic.com,🌏 全球加速
   - DOMAIN-SUFFIX,spotify.com,🇺🇲 美国节点
   - DOMAIN-SUFFIX,e-hentai.org,🇺🇲 美国节点
   - DOMAIN-SUFFIX,exhentai.org,🇺🇲 美国节点
   - DOMAIN-SUFFIX,javdb.com,🇭🇰 香港节点
+  - DOMAIN-SUFFIX,bahamut.akamaized.net,🇨🇳 台湾节点
+  - DOMAIN-SUFFIX,bahamut.com.tw,🇨🇳 台湾节点
+  - DOMAIN-SUFFIX,api.gamer.com.tw,🇨🇳 台湾节点
   - DOMAIN-SUFFIX,volcengineapi.com,DIRECT
   - DOMAIN-SUFFIX,api.codelife.cc,DIRECT
-  - DOMAIN-SUFFIX,cm.steampowered.com,DIRECT
-  - DOMAIN-SUFFIX,steamserver.net,DIRECT
-  - DOMAIN-SUFFIX,steamusercontent.com,DIRECT
-  - DOMAIN-SUFFIX,steamcontent.com,DIRECT
   - DOMAIN-SUFFIX,yuc.wiki,DIRECT
   - DOMAIN-SUFFIX,mo.fish,DIRECT
   - DOMAIN-SUFFIX,ruanmei.com,DIRECT
@@ -136,21 +129,48 @@ rules: #分流规则
   - DOMAIN-SUFFIX,549.tv,DIRECT
   - DOMAIN-SUFFIX,download.nvidia.com,DIRECT
   - DOMAIN-SUFFIX,sentry.io,REJECT
+##小米防检测
+  - DOMAIN-SUFFIX,api.installer.xiaomi.com,REJECT
+  - DOMAIN-SUFFIX,tracking.miui.com,REJECT
+  - DOMAIN-SUFFIX,data.mistat.xiaomi.com,REJECT
+  - DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
+  - DOMAIN-SUFFIX,sec.miui.com,REJECT
+  - DOMAIN-SUFFIX,log.avlyun.sec.intl.miui.com,REJECT
+  - DOMAIN-SUFFIX,tmfsdk.m.qq.com,REJECT
+  - DOMAIN-SUFFIX,a0.app.xiaomi.com,REJECT
+  - DOMAIN-SUFFIX,cn.app.chat.xiaomi.net,REJECT
+  - DOMAIN-SUFFIX,etl-xlmc-ssl.sandai.net,REJECT
+  - PROCESS-NAME,com.miui.guardprovider,REJECT
+  - PROCESS-NAME,com.miui.packageinstaller,REJECT
+  - PROCESS-NAME,com.miui.analytics,REJECT
+##vivo防检测
+  - PROCESS-NAME,com.iqoo.secure,REJECT
+  - PROCESS-NAME,com.android.packageinstaller,REJECT
+  - DOMAIN,adxlog.vivo.com.cn,REJECT
+  - DOMAIN-SUFFIX,avlyun.com,REJECT
+  - DOMAIN-SUFFIX,umeng.com,REJECT
+  - DOMAIN-SUFFIX,az.appstore.vivo.com.cn,REJECT
+  - DOMAIN-SUFFIX,isecure.vivo.com.cn,REJECT
+  - DOMAIN-SUFFIX,prt-stsdk.vivo.com.cn,REJECT
+  - DOMAIN-SUFFIX,stinmmtn.vivo.com.cn,REJECT
+  - IP-CIDR,220.181.128.0/24,REJECT
+  - IP-CIDR,119.96.201.219/32,REJECT
+##
   - PROCESS-NAME,coodesker-x64.exe,REJECT
   - PROCESS-NAME,2345PicViewer.exe,REJECT
+  - RULE-SET,Lan,DIRECT
+  - RULE-SET,SteamCN,DIRECT
   - RULE-SET,BiliBili,📺 哔哩哔哩
   - RULE-SET,OneDrive, 🪁 微软云盘
   - RULE-SET,Microsoft, 🪁 微软服务
   - RULE-SET,Apple,🍎 苹果服务
-  - RULE-SET,Direct,DIRECT
-  - RULE-SET,Lan,DIRECT
-  - RULE-SET,GlobalMedia,🎬 国际媒体
   - RULE-SET,Game,🎮 游戏平台
+  - RULE-SET,GlobalMedia,🎬 国际媒体
   - RULE-SET,Telegram,🌏 全球加速
   - RULE-SET,Github,🌏 全球加速
-  - RULE-SET,Google,🌏 全球加速
   - RULE-SET,Twitter,🌏 全球加速
+  - RULE-SET,Google,🌏 全球加速
   - RULE-SET,Proxy,🌏 全球加速
-  - RULE-SET,ChinaIP,DIRECT
+  - RULE-SET,Direct,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,🐟 兜底分流
