--- a/clash config.yaml
+++ b/clash config.yaml
@@ -95,7 +95,7 @@ proxy-groups: #策略组 a4更改为a2，即为手动选择
  
 rule-providers: # 分流规则集
   Direct:      {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt,                                            path: ./ruleset/Direct.yaml       }
-  Proxy:       {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules/release/proxy.txt,                                             path: ./ruleset/Proxy.yaml        }
+  Proxy:       {<<: *a5, url: https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt,                                             path: ./ruleset/Proxy.yaml        }
   Lan:         {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml,                            path: ./ruleset/Lan.yaml          }
   BiliBili:    {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml,                  path: ./ruleset/BiliBili.yaml     }
   GlobalMedia: {<<: *a4, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml,  path: ./ruleset/GlobalMedia.yaml  }
