--- a/Reject.yaml
+++ b/Reject.yaml
@@ -1,30 +1,33 @@
 payload:
-  - DOMAIN-REGEX,^xlog.jd|e.kuaishou|beizi.biz|adukwai|mobads|joyyrisksdk.*com,REJECT-DROP # 杂项去广告
+  - DOMAIN-REGEX,^xlog.jd|e.kuaishou|beizi.biz|adukwai|mobads|joyyrisksdk.*com
+  - DOMAIN-SUFFIX,sentry.io
+  - DOMAIN-SUFFIX,update.liteapks.com
+  - PROCESS-NAME,2345PicViewer.exe
 # 小米防检测
-  - DOMAIN-REGEX,^a0.app|mistat.*xiaomi.com,REJECT-DROP
-  - DOMAIN-REGEX,^sec|avlyun|umeng|tracking.*miui.com,REJECT-DROP
-  - DOMAIN-KEYWORD,tmfsdk,REJECT-DROP
-  - DOMAIN-SUFFIX,mpush-api.aliyun.com,REJECT-DROP
-  - DOMAIN-SUFFIX,beacon-api.aliyuncs.com,REJECT-DROP
-  - DOMAIN-SUFFIX,adash-emas.cn-hangzhou.aliyuncs.com,REJECT-DROP
-  - DOMAIN-SUFFIX,ad.xiaomi.com,REJECT-DROP
-  - DOMAIN-SUFFIX,api.installer.xiaomi.com,REJECT-DROP
-  - DOMAIN-SUFFIX,cn.app.chat.xiaomi.net,REJECT-DROP
-  - DOMAIN-SUFFIX,etl-xlmc-ssl.sandai.net,REJECT-DROP
-  - PROCESS-NAME,com.miui.analytics,REJECT-DROP
-  - PROCESS-NAME,com.miui.guardprovider,REJECT-DROP
-  - PROCESS-NAME,com.miui.packageinstaller,REJECT-DROP
+  - DOMAIN-REGEX,^a0.app|mistat.*xiaomi.com
+  - DOMAIN-REGEX,^sec|avlyun|umeng|tracking.*miui.com
+  - DOMAIN-KEYWORD,tmfsdk
+  - DOMAIN-SUFFIX,mpush-api.aliyun.com
+  - DOMAIN-SUFFIX,beacon-api.aliyuncs.com
+  - DOMAIN-SUFFIX,adash-emas.cn-hangzhou.aliyuncs.com
+  - DOMAIN-SUFFIX,ad.xiaomi.com
+  - DOMAIN-SUFFIX,api.installer.xiaomi.com
+  - DOMAIN-SUFFIX,cn.app.chat.xiaomi.net
+  - DOMAIN-SUFFIX,etl-xlmc-ssl.sandai.net
+  - PROCESS-NAME,com.miui.analytics
+  - PROCESS-NAME,com.miui.guardprovider
+  - PROCESS-NAME,com.miui.packageinstaller
 # vivo防检测
-  - PROCESS-NAME,com.iqoo.secure,REJECT-DROP
-  - PROCESS-NAME,com.vivo.sdkplugin,REJECT-DROP
-  - PROCESS-NAME,com.bbk.iqoo.logsystem,REJECT-DROP
-  - PROCESS-NAME,com.android.packageinstaller,REJECT-DROP
-  - DOMAIN,vhs.wwstat.com,REJECT-DROP
-  - DOMAIN,adxlog.vivo.com.cn,REJECT-DROP
-  - DOMAIN-SUFFIX,msch.f.360.cn,REJECT-DROP
-  - DOMAIN-SUFFIX,az.appstore.vivo.com.cn,REJECT-DROP
-  - DOMAIN-SUFFIX,isecure.vivo.com.cn,REJECT-DROP
-  - DOMAIN-SUFFIX,prt-stsdk.vivo.com.cn,REJECT-DROP
-  - DOMAIN-SUFFIX,stinmmtn.vivo.com.cn,REJECT-DROP
-  - IP-CIDR,220.181.128.0/24,REJECT-DROP
-  - IP-CIDR,119.96.201.219/32,REJECT-DROP
+  - PROCESS-NAME,com.iqoo.secure
+  - PROCESS-NAME,com.vivo.sdkplugin
+  - PROCESS-NAME,com.bbk.iqoo.logsystem
+  - PROCESS-NAME,com.android.packageinstaller
+  - DOMAIN,vhs.wwstat.com
+  - DOMAIN,adxlog.vivo.com.cn
+  - DOMAIN-SUFFIX,msch.f.360.cn
+  - DOMAIN-SUFFIX,az.appstore.vivo.com.cn
+  - DOMAIN-SUFFIX,isecure.vivo.com.cn
+  - DOMAIN-SUFFIX,prt-stsdk.vivo.com.cn
+  - DOMAIN-SUFFIX,stinmmtn.vivo.com.cn
+  - IP-CIDR,220.181.128.0/24
+  - IP-CIDR,119.96.201.219/32
