--- a/privacy.yaml
+++ b/privacy.yaml
@@ -41,13 +41,13 @@ payload:
   - DOMAIN-SUFFIX,bayescom.com
   - DOMAIN-SUFFIX,biu-cn.dwstatic.com
   - DOMAIN-SUFFIX,up.markiapp.com
-  #- DOMAIN-SUFFIX,govo.markiapp.com
-  #- DOMAIN-SUFFIX,pushsdk.markiapp.com
+  - DOMAIN-SUFFIX,govo.markiapp.com
+  - DOMAIN-SUFFIX,pushsdk.markiapp.com
   - DOMAIN-SUFFIX,apipubless.markiapp.com
-  #- DOMAIN-SUFFIX,data-report.markiapp.com
+  - DOMAIN-SUFFIX,data-report.markiapp.com
   - DOMAIN-SUFFIX,stat2.openinstall.io
   - DOMAIN-SUFFIX,stat2.deepinstall.com
   - DOMAIN-SUFFIX,push-api.duowan.com
-  - DOMAIN-KEYWORD,sttc-os-lgn
-  - DOMAIN-KEYWORD,sttc-lgnsrv
-  - DOMAIN-KEYWORD,sttc-gateway
+  #- DOMAIN-KEYWORD,sttc-os-lgn
+  #- DOMAIN-KEYWORD,sttc-lgnsrv
+  #- DOMAIN-KEYWORD,sttc-gateway
