--- a/Full1.ini
+++ b/Full1.ini
@@ -1,3 +1,14 @@
+# 抖音修改IP
++.amemv.com
++.douyinvod.com
+
+# 快手修改IP
++.gifshow.com
++.apissl.ksapisrv.com
+
+# 小红书修改IP
++.edith.xiaohongshu.com
+
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -60,3 +71,4 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+
