--- a/privacy.yaml
+++ b/privacy.yaml
@@ -33,6 +33,8 @@ payload:
   - PROCESS-NAME,com.android.packageinstaller
 # 广告
   #- DOMAIN-KEYWORD,httpdns
+  - DOMAIN-SUFFIX,adkwai.com
+  - DOMAIN-SUFFIX,adx-tk-sz.metricslinks.com
   - DOMAIN-SUFFIX,sentry.io
   - DOMAIN-SUFFIX,black.qimo.ink
   - DOMAIN-SUFFIX,zhangyuyidong.cn
@@ -63,4 +65,5 @@ payload:
   - DOMAIN-KEYWORD,sttc-os-lgn
   - DOMAIN-KEYWORD,sttc-lgnsrv
   - DOMAIN-KEYWORD,sttc-gateway
+
 
