--- a/privacy.yaml
+++ b/privacy.yaml
@@ -33,6 +33,7 @@ payload:
   - PROCESS-NAME,com.android.packageinstaller
 # 广告
   #- DOMAIN-KEYWORD,httpdns
+  - DOMAIN-SUFFIX,cpro.baidustatic.com
   - DOMAIN-SUFFIX,tianmu.mobi
   - DOMAIN-SUFFIX,adkwai.com
   - DOMAIN-SUFFIX,adx-tk-sz.metricslinks.com
@@ -66,6 +67,7 @@ payload:
   - DOMAIN-KEYWORD,sttc-os-lgn
   - DOMAIN-KEYWORD,sttc-lgnsrv
   - DOMAIN-KEYWORD,sttc-gateway
+
 
 
 
